ctowasm/test/samples/error/test.c
#include <source_stdlib>
int main() { 
  120;
}

